增加支持邮件和微信接口模板

--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,8 @@
 	<classpathentry kind="var" path="MAVEN_REPO/json/jars/json-lib-2.4-jdk15.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/json/jars/jsonplugin-0.34.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/json/jars/jsontools-core-1.7.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/commons-email/jars/activation.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/commons-email/jars/commons-email-1.2.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/commons-email/jars/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
