增加TLS1.2的支持

--- a/.classpath
+++ b/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="var" path="MAVEN_REPO/commons-email/jars/activation.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/commons-email/jars/commons-email-1.2.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/commons-email/jars/mail.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/bouncycastle/jars/bcprov-jdk15on-1.49.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
